--- a/.env.example
+++ b/.env.example
@@ -6,5 +6,11 @@ VITE_FIREBASE_STORAGE_BUCKET=your_project.appspot.com
 VITE_FIREBASE_MESSAGING_SENDER_ID=123456789
 VITE_FIREBASE_APP_ID=your_app_id
 
-# OpenAI Configuration (for production Whisper integration)
+# OpenAI Configuration
 VITE_OPENAI_API_KEY=your_openai_api_key_here
+VITE_OPENAI_MODEL=gpt-4
+VITE_OPENAI_WHISPER_MODEL=whisper-1
+
+# API Configuration
+VITE_API_BASE_URL=http://localhost:5173
+VITE_ENABLE_REAL_AI=true
