--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^12.2.1",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.344.0",
+    "openai": "^5.19.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.8.2",
